styled instagram api. clickable pictures with modal but not centered correctly

--- a/app/assets/stylesheets/tags.css.scss
+++ b/app/assets/stylesheets/tags.css.scss
@@ -1,7 +1,60 @@
 // Place all the styles related to the tags controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body, html{
+	height: 100%;
+}
 .image_header .image_ig img {
 	height: 300px;
 	width: 300px;
+}
+.thumbs{
+	border: 1px solid black;
+	float: left;
+	img{
+		height: 100%;
+		width: 100%;
+	}
+}
+.viewer{
+	position: fixed;
+	z-index: 100;
+	right: 0px;
+	left: 0px;
+	bottom: 0;
+	top: 0;
+	background-color: rgba(0,0,0,0.7);
+	display: none;
+	img{
+		position: absolute;
+		height: 50%;
+		width: 500px;
+		margin: 50px auto;
+
+	}
+
+}
+.static-viewer{
+	padding: 0 20% 50px;
+	img{
+		width: 100%;
+		height: 100%;
+		margin: 0 auto;
+		border: 1px solid black;
+		margin-bottom: -20px;
+	}
+	.caption{
+		z-index: 10;
+		background-color:black;
+		color: white;
+		visibility: hidden;
+		a{
+			color: white;
+		}
+	}
+	&:hover{
+		.caption{
+			visibility: visible;
+		}
+	}
 }
